@@ -26,6 +26,8 @@ dillo-3.3.0 [Unreleased]
  - Set DILLO_PID variable when executing actions so dilloc can read it.
  - Add support for "page_action" option to define custom entries in the page
    menu to run programs or scripts.
+ - Add "mark_unloaded_images" option to show a border in images not loaded, so
+   they are easier to see.
    Patches: Rodrigo Arias Mallo
 +- Middle click on back or forward button opens page in new tab.
    Patches: Alex
